2011-06-15  Simson Garfinkel  <simsong@msimsonnet.local>

	* hashdeep/main.h (class file_data_t): removed full_name, as it is redundent with file_name

	* hashdeep/multihash.cpp (multihash_update): moved hash_sum and hash_context from algorithm_t structure to file_info_t structure.

	* hashdeep/main.h: removed state *s backpointer.
	ALGORITHM_NAME_LENGTH changed to MAX_ALGORITHM_NAME_LENGTH and
	ALGORITHM_CONTEXT_SIZE changed to MAX_ALGORITHM_CONTEXT_SIZE.

2011-06-14  Simson Garfinkel  <simsong@alphonse-mucha.local.tld>

	* hashdeep/main.h: changed hashname_t to hashid_t becuase it is an id number, not a name.

2011-06-14  Simson Garfinkel  <simsong@11.sub-75-243-148.myvzw.com>

	* hashdeep/main.h: removed __BEGIN_DECLS and __END_DECLS; we are now a C++ program!

	* hashdeep/hash.cpp: moved shorten_filename to display.cpp becuase the shortened filenames are just used in a particular case. we can set a flag to print them and generate them on the fly.

2011-06-12  Simson Garfinkel  <simsong@imac3.home>

	* hashdeep/main.cpp (main): s->cwd is now pre-allocated

	* hashdeep/main.h (class file_data_t): timestamp moved to current_file

	* hashdeep/multihash.cpp (multihash_update): moved *buffer from dynamic allocation to allocated withn the current_file.

	* hashdeep/hash.cpp (hash_stdin): moved full_name,short_name and msg into current_file

	* hashdeep/md5deep_match.cpp (parse_encase_file): increased buffer[] from 19 bytes to 64; why be stingy? It's no longer dynamically allocated.
	(parse_encase_file): increased result from dynamically allocated at s->hash_length*2 to 1024.

2011-06-11 Jesse Kornblum

	* display.cpp (display_size) Removed ten character limit on
	  displayed sizes. We now display the full size regardless
	  of mode.


2011-06-07  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* hashdeep/files.cpp (hash_file_type): known_fn changed from char * to char[PATH_MAX+1]

	* hashdeep/main.h (class state): time_str is now a local variable, not in state.
